--- a/index.html
+++ b/index.html
@@ -3,9 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
+    <title>Bemutatkozás</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    
+    <ul>
+        <li><a href="./index.html">Bemutatkozás</a></li>
+        <li><a href="./kowi.html">Egy</a></li>
+        <li><a href="./pet.html">Kettő</a></li>
+      </ul>
 </body>
 </html>
