--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
 <body>
     <ul>
         <li><a href="./index.html">Bemutatkozás</a></li>
-        <li><a href="./kowi.html">Egy</a></li>
-        <li><a href="./pet.html">Kettő</a></li>
+        <li><a href="./kowi.html">Css preprocessor 1.</a></li>
+        <li><a href="./pet.html">Css preprocessor 2.</a></li>
     </ul>
 
     <div class="container">
         <div class="elem">
-            <a href="kowi.html">Css preprocessor 1.</a>
+            <a href="kowi.html"></a>
 
         </div>
     </div>
     <div class="container">
         <div class="elem">
-            <a href="pet.html">Css preprocessor 2.</a>
+            <a href="pet.html"></a>
 
         </div>
     </div>
