--- a/kowi.html
+++ b/kowi.html
@@ -8,8 +8,8 @@
 <body>
     <ul>
         <li><a href="./index.html">Bemutatkozás</a></li>
-        <li><a href="./kowi.html">Egy</a></li>
-        <li><a href="./pet.html">Kettő</a></li>
+        <li><a href="./kowi.html">Css preprocessor 1.</a></li>
+        <li><a href="./pet.html">Css preprocessor 2.</a></li>
     </ul>
 </body>
 </html>
