--- a/pet.html
+++ b/pet.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./pet.css">
 </head>
 <body>
     <ul>
         <li><a href="./index.html">Bemutatkozás</a></li>
-        <li><a href="./kowi.html">Egy</a></li>
-        <li><a href="./pet.html">Kettő</a></li>
+        <li><a href="./kowi.html">Css preprocessor 1.</a></li>
+        <li><a href="./pet.html">Css preprocessor 2.</a></li>
     </ul>
 </body>
 </html>
