--- a/kowi.html
+++ b/kowi.html
@@ -12,5 +12,30 @@
         <li><a href="./kowi.html">Css preprocessor 1.</a></li>
         <li><a href="./pet.html">Css preprocessor 2.</a></li>
     </ul>
+    <h1>Mire jók a css preprocessorok?</h1>
+    <div class="container">
+    <div class="elem ">
+       Röviden: a preprocesszorok a CSS-t egy dinamikusabb, programozhatóbb nyelvvé alakítják, ami jelentősen gyorsítja a fejlesztést és növeli a nagyméretű projektek skálázhatóságát.
+    </div class="elem ">
+    <div>
+        A CSS preprocesszorok (mint az Sass, a Less vagy a Stylus) arra jók, hogy a hagyományos programozási nyelvekből ismert funkciókkal bővítsék a CSS-t, mielőtt az végleges CSS-kóddá alakulna a böngésző számára.
+
+Céljuk a CSS kód hatékonyabbá, átláthatóbbá és karbantarthatóbbá tétele.
+
+Főbb előnyök dióhéjban
+Változók (Variables): Lehetővé teszik értékek (pl. színek, betűméretek) tárolását és újrafelhasználását. Ez gyorsabbá teszi az értékek globális megváltoztatását.
+
+Példa: A főmárkaszín egyetlen helyen történő definiálása.
+
+Beágyazás (Nesting): Segítenek az áttekinthetőbb kódstruktúra kialakításában azáltal, hogy egymásba ágyazhatjuk a szelektorokat. Ez tükrözi a HTML hierarchiáját.
+
+Mixinek (Mixins) / Függvények (Functions): Lehetővé teszik CSS kódrészletek újrafelhasználható blokkokba foglalását. Ideálisak a vendor prefixek kezelésére vagy a gyakran ismétlődő tulajdonságcsoportok egyszerűsítésére.
+
+Importálás (Importing) / Modulok: Segítségükkel a CSS kódot több, kisebb, jól szervezett fájlba oszthatjuk (pl. colors.scss, layout.scss), ami áttekinthetővé teszi a nagy projekteket.
+
+Logika és Számítások: Olyan alapvető matematikai műveleteket és logikai struktúrákat (pl. if/else, for ciklusok) is lehetővé tesznek, amelyekkel dinamikus, ismétlődő stílusokat generálhatunk.
+    </div>
+</div>
+
 </body>
 </html>
