--- a/pet.html
+++ b/pet.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./pet.css">
+    <!--https://www.geeksforgeeks.org/css/what-is-a-css-preprocessors/
+    https://webdesigntanfolyam.com/mik-a-css-preprocesszorok-es-mire-jok/
+    -->
 </head>
 <body>
     <ul>
@@ -12,5 +15,26 @@
         <li><a href="./kowi.html">Css preprocessor 1.</a></li>
         <li><a href="./pet.html">Css preprocessor 2.</a></li>
     </ul>
+
+    <div class="container">
+        <h1>Népszerű CSS preprocesszorok</h1>
+        <div class="elem">
+            <h4>Sass</h4>
+            <p>asddfgghjjkléáű</p>
+        </div>
+        <div class="elem">
+            <h4>Less</h4>
+            <p>asddfgghjjkléáű</p>
+        </div>
+        <div class="elem">
+            <h4>Stylus</h4>
+            <p>asddfgghjjkléáű</p>
+        </div>
+        <div class="elem">
+            <h4>PostCSS</h4>
+            <p>asddfgghjjkléáű</p>
+        </div>
+    </div>
+
 </body>
 </html>
