--- a/pet.html
+++ b/pet.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Preprocessor példák</title>
     <link rel="stylesheet" href="./pet.css">
     <!--https://www.geeksforgeeks.org/css/what-is-a-css-preprocessors/
     https://webdesigntanfolyam.com/mik-a-css-preprocesszorok-es-mire-jok/
@@ -17,22 +17,29 @@
     </ul>
 
     <div class="container">
-        <h1>Népszerű CSS preprocesszorok</h1>
+        <div class="cim">
+            <h1>Népszerű CSS preprocesszorok</h1>
+        </div>
         <div class="elem">
             <h4>Sass</h4>
-            <p>asddfgghjjkléáű</p>
+            <p>A Sass az egyik legismertebb CSS kiegészítő, amit sok fejlesztő használ, ha kicsit rendszerezettebben akar stílusokat írni. Kétféle módon lehet vele dolgozni: van egy egyszerűbb, behúzásokkal működő verzió, meg egy olyan, ami szinte ugyanúgy néz ki, mint a sima CSS. Amiért szeretik, az az, hogy lehet benne változókat használni, egymásba ágyazni szabályokat, sőt, még ciklusokat és feltételeket is írni, ami elég jól jön, ha nagyobb projekten dolgozol.</p>
+            <h6>Példa</h6>
+            
         </div>
         <div class="elem">
             <h4>Less</h4>
-            <p>asddfgghjjkléáű</p>
+            <p>A Less hasonló elven működik, de talán egy fokkal egyszerűbb. A szintaxisa nagyon hasonlít a sima CSS-re, így könnyebb vele elkezdeni. Ebben is vannak változók, mixinek, és még számolni is tudsz benne, például színekkel vagy méretekkel. Elég jól működik együtt olyan rendszerekkel, mint a WordPress, szóval sokan választják kezdésnek.</p>
         </div>
         <div class="elem">
             <h4>Stylus</h4>
-            <p>asddfgghjjkléáű</p>
+            <p>A Stylus már egy kicsit más világ. Itt szinte mindent el lehet hagyni: nem kell kapcsos zárójel, se pontosvessző, sőt, még a kettőspont is opcionális. Ez persze nagy szabadságot ad, de néha kicsit kaotikus is lehet. Cserébe viszont nagyon sok mindent tud: feltételek, ciklusok, saját függvények — szinte már programozás.</p>
         </div>
         <div class="elem">
             <h4>PostCSS</h4>
-            <p>asddfgghjjkléáű</p>
+            <p>A PostCSS egy egészen más megközelítés. Ez nem egy klasszikus preprocesszor, hanem inkább egy olyan rendszer, amibe különféle bővítményeket lehet pakolni. Például van olyan plugin, ami automatikusan hozzáadja a böngészős előtagokat, vagy épp optimalizálja a CSS-t. Nagyon jól működik együtt modern eszközökkel, mint a Webpack, és pont ezért sokan választják, ha moduláris megoldást keresnek</p>
+        </div>
+        <div style="background-color: black;">
+            <img src="https://www.innominds.com/hubfs/css.jpg" alt="CSS kép">
         </div>
     </div>
 
