--- a/kowi.html
+++ b/kowi.html
@@ -12,12 +12,12 @@
         <li><a href="./kowi.html">Css preprocessor 1.</a></li>
         <li><a href="./pet.html">Css preprocessor 2.</a></li>
     </ul>
-    <h1 class="elem">Mire jók a css preprocessorok?</h1>
+    <div class="container"><h1 class="elem">Mire jók a css preprocessorok?</h1> </div>
     <div class="container">
-    <div class="elem ">
+    <div class="container ">
        Röviden: a preprocesszorok a CSS-t egy dinamikusabb, programozhatóbb nyelvvé alakítják, ami jelentősen gyorsítja a fejlesztést és növeli a nagyméretű projektek skálázhatóságát.
     </div>
-    <div class="elem ">
+    <div class="container">
         A CSS preprocesszorok (mint az Sass, a Less vagy a Stylus) arra jók, hogy a hagyományos programozási nyelvekből ismert funkciókkal bővítsék a CSS-t, mielőtt az végleges CSS-kóddá alakulna a böngésző számára.
 
 Céljuk a CSS kód hatékonyabbá, átláthatóbbá és karbantarthatóbbá tétele.
