bemutatkozas grid + text közép

--- a/index.html
+++ b/index.html
@@ -13,15 +13,18 @@
         <li><a href="./pet.html">Css preprocessor 2.</a></li>
     </ul>
 
-    <div class="container">
-        <div class="elem">
-            
-        
+    <div class="kulso">
+        <div class="container elso">
+            <div class="elem">
+                <h2>Noel</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores sunt cumque commodi modi laudantium et dignissimos fuga! Sunt quisquam nesciunt, dolorum expedita iste velit tempora voluptates laudantium accusantium, inventore tempore!</p>
+            </div>
         </div>
-    </div>
-    <div class="container">
-        <div class="elem">
-
+        <div class="container masodik">
+            <div class="elem">
+                <h2>Petra</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea quia iste vel, enim doloremque, a est ratione iusto quisquam accusamus ex! Reprehenderit ipsa similique voluptates enim officiis vel dicta illo!</p>
+            </div>
         </div>
     </div>
 </body>
