--- a/kowi.html
+++ b/kowi.html
@@ -12,7 +12,10 @@
         <li><a href="./kowi.html">Css preprocessor 1.</a></li>
         <li><a href="./pet.html">Css preprocessor 2.</a></li>
     </ul>
-    <div class="container"><h1 class="elem">Mire jók a css preprocessorok?</h1> </div>
+    <div class="container"><img height="300px" src="https://pngimg.com/d/laptop_PNG5911.png" alt="laptop">
+        <img height="300px" src="https://static.vecteezy.com/system/resources/previews/024/039/373/non_2x/computer-mouse-on-a-transparent-background-free-png.png" alt="eger">
+
+    <h1 class="elem">Mire jók a css preprocessorok?</h1> 
     <div class="container">
     <div class="container ">
        Röviden: a preprocesszorok a CSS-t egy dinamikusabb, programozhatóbb nyelvvé alakítják, ami jelentősen gyorsítja a fejlesztést és növeli a nagyméretű projektek skálázhatóságát.
@@ -35,6 +38,7 @@ Importálás (Importing) / Modulok: Segítségükkel a CSS kódot több, kisebb,
 
 Logika és Számítások: Olyan alapvető matematikai műveleteket és logikai struktúrákat (pl. if/else, for ciklusok) is lehetővé tesznek, amelyekkel dinamikus, ismétlődő stílusokat generálhatunk.
     </div>
+</div>
 </div>
 
 </body>
