--- a/pet.html
+++ b/pet.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <ul>
-        <li><a href="./index.html">Bemutatkozás</a></li>
-        <li><a href="./kowi.html">Css preprocessor 1.</a></li>
-        <li><a href="./pet.html">Css preprocessor 2.</a></li>
+        <li><a href="./index.html">Főoldal</a></li>
+        <li><a href="./kowi.html">Css preprocessorok bemutatása</a></li>
+        <li><a href="./pet.html">Preprocessor példák</a></li>
     </ul>
 
     <div class="container">
