--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="container elso">
             <div class="elem">
                 <h2>Noel</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores sunt cumque commodi modi laudantium et dignissimos fuga! Sunt quisquam nesciunt, dolorum expedita iste velit tempora voluptates laudantium accusantium, inventore tempore!</p>
+                <p>Kovács Noel becses nevem, legtöbbször viszont Kowinak becéznek. 17 éves vagyok, és még egy kicsit tanácstalan az életemmel kapcsolataban. Kedvenc hobbim nem igazán van, sokkal jobban érdekel a programnál, hogy számomra kedves emberekkel legyek. Bármilyen időtöltést nagyon</p>
             </div>
         </div>
         <div class="container masodik">
