--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="container elso">
             <div class="elem">
                 <h2>Noel</h2>
-                <p>Kovács Noel becses nevem, legtöbbször viszont Kowinak becéznek. 17 éves vagyok, és még egy kicsit tanácstalan az életemmel kapcsolataban. Kedvenc hobbim nem igazán van, sokkal jobban érdekel a programnál, hogy számomra kedves emberekkel legyek. Bármilyen időtöltést nagyon</p>
+                <p>Kovács Noel becses nevem, legtöbbször viszont Kowinak becéznek. 17 éves vagyok, és még egy kicsit tanácstalan az életemmel kapcsolataban. Kedvenc hobbim nem igazán van, sokkal jobban érdekel a programnál, hogy számomra kedves emberekkel legyek. Bármilyen időtöltést nagyon szeretek, amiben a barátnőm szerepel. Életcélom boldogan, jó körülményt teremtve élni együtt a barátnőmmel. Szeretek ezenkívül főzni (A barátnőmmel), Clash Royaleozni, és szeretném majd felfedezni a világot. Szeretek tudni dolgokat, ezért szeretnék minél több dologról minél több tudást szerezni.</p>
             </div>
         </div>
         <div class="container masodik">
