--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bemutatkozás</title>
+    <title>Főoldal</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
@@ -23,7 +23,7 @@
         <div class="container masodik">
             <div class="elem">
                 <h2>Petra</h2>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ea quia iste vel, enim doloremque, a est ratione iusto quisquam accusamus ex! Reprehenderit ipsa similique voluptates enim officiis vel dicta illo!</p>
+                <p></p>
             </div>
         </div>
     </div>
