--- a/kowi.html
+++ b/kowi.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Css preprocessorok bemutatása</title>
     <link rel="stylesheet" href="./kowi.css">
 </head>
 <body>
