--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="container masodik">
             <div class="elem">
                 <h2>Petra</h2>
-                <p></p>
+                <p>Bagó Petra vagyok és 17 éves. Szabadidőmet legtöbbször olvasással vagy sétálással töltöm. Ez mellett szeretek időt tölteni a barátaimmal és új embereket megismerni.</p>
             </div>
         </div>
     </div>
